// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentPrompt renders correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Avatar
      avatarUrl="me.png"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Joe, how can you help?
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`CommentPrompt renders with comment text 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Avatar
      avatarUrl="me.png"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      A long enough comment that it will 
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`PostDetails renders correctly 1`] = `
<View>
  <Connect(Comments)
    footer={
      <CommentPrompt
        commentEdit={undefined}
        currentUser={
          Object {
            "avatarUrl": "me.png",
            "firstName": [Function],
            "id": 123,
          }
        }
        newComment={undefined}
      />
    }
    header={
      <View>
        <PostHeader
          communities={
            Array [
              Object {
                "slug": "foom",
              },
            ]
          }
          creator={
            Object {
              "id": "77",
              "name": "Houdini",
            }
          }
          date="2017-05-19T23:24:58Z"
          editPost={[Function]}
          id="91"
          showMember={[Function]}
          slug="foom"
          type="request"
        />
        <View>
          <SpaceFillingImage
            imageUrl="foom.png"
          />
        </View>
        <PostBody
          details="Lo"
          linkPreview={
            Object {
              "id": "34",
            }
          }
          showMember={[Function]}
          showTopic={[Function]}
          slug="foom"
          title="Hi"
        />
        <PostFooter
          commenters={
            Array [
              Object {
                "id": 9,
              },
              Object {
                "id": 7,
              },
            ]
          }
          commentsTotal={12}
          currentUser={
            Object {
              "avatarUrl": "me.png",
              "firstName": [Function],
              "id": 123,
            }
          }
          id="91"
          myVote={true}
          showActivityLabel={true}
          votesTotal={8}
        />
      </View>
    }
    postId="91"
    postPending={true}
    showMember={[Function]}
    showTopic={[Function]}
    slug="foom"
  />
</View>
`;
